--- a/components/disp7seg/CMakeLists.txt
+++ b/components/disp7seg/CMakeLists.txt
@@ -1,3 +1,7 @@
-set(COMPONENT_SRCS "disp7seg.c")
-set(COMPONENT_ADD_INCLUDEDIRS ".")
-register_component()
+#set(COMPONENT_SRCS "disp7seg.c")
+#set(COMPONENT_ADD_INCLUDEDIRS ".")
+#register_component()
+
+idf_component_register(SRCS "disp7seg.c"
+                       INCLUDE_DIRS "."
+                       REQUIRES driver)
