--- a/components/rmt_nec_init/CMakeLists.txt
+++ b/components/rmt_nec_init/CMakeLists.txt
@@ -1,3 +1,3 @@
-#idf_component_register(SRCS "rmt_nec_init.c"
+#idf_component_register(SRCS
 #                       INCLUDE_DIRS "."
 #                       REQUIRES driver)
